--- a/views/index.html
+++ b/views/index.html
@@ -4,10 +4,29 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    
     <title>streetsmart</title>
+
+    <link rel="stylesheet" href="vendor/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="styles/styles.css">
+
+    <script src="vendor/jQuery/dist/jquery.min.js"></script>
+    <script src="vendor/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="vendor/handlebars/handlebars.min.js"></script>
+
+    <script src="scripts/app.js"></script>
+
   </head>
   <body>
+    <!-- JUMBOTRON -->
 
+    <!-- GALLERY -->
+
+    <!-- PIECE FORM -->
+
+    <!-- ONE PIECE -->
+
+    <!-- PIECE MODAL-->
+
+    <!-- ARTIST PAGE -->
   </body>
 </html>
