basic outline for html layout

--- a/views/index.html
+++ b/views/index.html
@@ -6,25 +6,65 @@
 
     <title>streetsmart</title>
 
-    <link rel="stylesheet" href="vendor/bootstrap/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../public/styles/styles.css">
 
-    <script src="vendor/jQuery/dist/jquery.min.js"></script>
-    <script src="vendor/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script src="vendor/handlebars/handlebars.min.js"></script>
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
+    <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.5/handlebars.min.js"></script>
 
-    <script src="scripts/app.js"></script>
+    <script type="text/javascript" src="../public/scripts/app.js"></script>
 
   </head>
   <body>
-    <!-- JUMBOTRON -->
+<!-- JUMBOTRON -->
+    <div class="jumbotron">
+      <div class="container">
+        <h1>Helloooo</h1>
+      </div>
+    </div>
+<!-- GALLERY -->
+    <section class="container" id="gallery">
+      <div class="row">
+        <div class="col-md-10 col-md-offset-1">Gallery</div>
+      </div>
+    </section>
+<!-- PIECE FORM -->
+    <section class="container" id="piece-form">
+      <div class="row">
+        <div class="col-md-10">
 
-    <!-- GALLERY -->
+          <form>
+            <fieldset>
 
-    <!-- PIECE FORM -->
+              <legend>Add New Piece</legend>
 
-    <!-- ONE PIECE -->
+              <div class="form-group">Input</div>
 
+              <div class="form-group">Input</div>
+
+              <div class="form-group">Input</div>
+
+              <div class="form-group">Input</div>
+
+              <div class="form-group">Input</div>
+
+              <div class="form-group">Button</div>
+
+            </fieldset>
+          </form>
+
+        </div>
+      </div>
+    </section>
+<!-- ONE PIECE HANDLEBARS TEMPLATE-->
+    <script id="piece-template" type="text/x-handlebars-template">
+      <div class="container">
+        <div class="row">
+          
+        </div>
+      </div>
+    </script>
     <!-- PIECE MODAL-->
 
     <!-- ARTIST PAGE -->
