add bootstrap to form

--- a/views/index.html
+++ b/views/index.html
@@ -49,52 +49,60 @@
       <div class="row">
         <div class="col-md-8 col-md-offset-2">
 
-          <form>
+          <form class="form-horizontal">
             <fieldset>
 
               <legend>Add New Piece</legend>
 
               <div class="form-group">
-                <label for="type">Type :</label>
-                <select>
-                  <option value="mural">Mural</option>
-                  <option value="painting">Painting</option>
-                  <option value="sticker">Sticker</option>
-                  <option value="stencil">Stencil</option>
-                  <option value="sculpture">Sculpture</option>
-                </select>
+                <label for="type" class="col-md-4 control-label">Type :</label>
+                <div class="col-md-4">
+                    <select>
+                    <option value="mural">Mural</option>
+                    <option value="painting">Painting</option>
+                    <option value="sticker">Sticker</option>
+                    <option value="stencil">Stencil</option>
+                    <option value="sculpture">Sculpture</option>
+                  </select>
+                </div>
               </div>
 
               <div class="form-group">
-                <label for="piece-title">Title :</label>
-                <input type="text" name="title">
+                <label for="piece-title" class="col-md-4 control-label">Title :</label>
+                <div class="col-md-4">
+                  <input type="text" name="title">
+                </div>
               </div>
 
               <div class="form-group">
-                <label for="location">Location :</label>
-                <input type="text" name="location" placeholder="Address or description">
+                <label for="location" class="col-md-4 control-label">Location :</label>
+                <div class="col-md-4">
+                  <input type="text" name="location" placeholder="Address or description">
+                </div>
               </div>
 
               <div class="form-group">
-                <label for="active">Active :</label>
-                <input type="checkbox" name="active">
+                <label for="active" class="col-md-4 control-label">Active :</label>
+                <div class="col-md-4">
+                  <input type="checkbox" name="active">
+                </div>
               </div>
 
               <div class="form-group">
-                <label for="note">Note :</label>
-                <textarea type="text" name="note"></textarea>
+                <label for="note" class="col-md-4 control-label">Note :</label>
+                <div class="col-md-4"><textarea type="text" name="note"></textarea></div>
               </div>
 
               <div class="form-group">
-                <label for="image">Upload an Image :</label>
-                <input type="text" name="image" placeholder="Paste link here">
+                <label for="image" class="col-md-4 control-label">Upload an Image :</label>
+                <div class="col-md-4">
+                  <input type="text" name="image" placeholder="Paste link here">
+                </div>
                 <!-- <img src="#" height="200" alt="Image Preview"> -->
               </div>
 
               <div class="form-group">
-                <div class="col-md-4">
-                  <button id="singlebutton" name="singlebutton" class="btn btn-primary">Submit</button>
-                </div>
+                  <div class="col-md-10"><button id="post-button" class="btn btn-primary pull-right">Save</button></div>
               </div>
             </fieldset>
           </form>
@@ -109,53 +117,59 @@
 
       <script id="piece-template" type="text/x-handlebars-template">
         <div class="row piece">
-          <div class="col-md-10">
-            <div>
-
+          <div class="col-md-10 col-md-offset-1">
+            <div class="panel panel-default">
+              <div class="panel-body">
               <!-- begin piece internal row -->
-              <div class="row">
-                <div class="col-md-9 col-xs-12 piece_entry">
-                  <ul class="list-group">
+                <div class="row">
+                  <div class="col-md-9 col-xs-12 piece_entry">
+                    <ul class="list-group">
 
 
-                    <div class="thumbnail piece-img">
-                      <img src="{{image}}" alt="piece image">
-                    </div>
+                      <div class="thumbnail piece-img">
+                        <img src="{{image}}" alt="piece image">
+                      </div>
 
-                    <li class="list-group-item">
-                      <h3 class="inline-header">Title:</h3>
-                      <span class="piece-title">{{title}}</span>
-                    </li>
+                      <li class="list-group-item">
+                        <h3 class="inline-header">Title:</h3>
+                        <span class="piece-title">{{title}}</span>
+                      </li>
 
-                    <li class="list-group-item">
-                      <h3 class="inline-header">Type:</h3>
-                      <span class="piece-type">{{type}}</span>
-                    </li>
+                      <li class="list-group-item">
+                        <h3 class="inline-header">Type:</h3>
+                        <span class="piece-type">{{type}}</span>
+                      </li>
 
-                    <li class="list-group-item">
-                      <h3 class="inline-header">Location:</h3>
-                      <span class="location">{{location}}</span>
-                    </li>
+                      <li class="list-group-item">
+                        <h3 class="inline-header">Location:</h3>
+                        <span class="location">{{location}}</span>
+                      </li>
 
-                    <li class="list-group-item">
-                      <h3 class="inline-header">Active:</h3>
-                      <span class="piece-title">{{active}}</span>
-                    </li>
+                      <li class="list-group-item">
+                        <h3 class="inline-header">Active:</h3>
+                        <span class="piece-title">{{active}}</span>
+                      </li>
 
-                    <li class="list-group-item">
-                      <h3 class="inline-header">Note:</h3>
-                      <span class="piece-note">{{note}}</span>
-                    </li>
+                      <li class="list-group-item">
+                        <h3 class="inline-header">Note:</h3>
+                        <span class="piece-note">{{note}}</span>
+                      </li>
 
 
-                  </ul>
+                    </ul>
+                  </div>
+
+
                 </div>
 
-
+                <div class='panel-footer'>
+                      <button class="btn btn-info add-artist">Add Artist</button>
+                      <button class="btn btn-warning delete-piece">Delete Piece</button> <!--TODO: CHANGE TO ADMIN -->
+                      <button class="btn btn-primary edit-piece">Edit Piece</button>
+                      <button class="btn btn-success save-piece">Save Piece</button>
+                </div>
               </div>
-
             </div>
-            <div>Button Panel</div>
           </div>
         </div>
       </script>
