successfully reference Artist--seed data working

--- a/views/index.html
+++ b/views/index.html
@@ -141,6 +141,11 @@
                       </li>
 
                       <li class="list-group-item">
+                        <h3 class="inline-header">Artist:</h3>
+                        <span class="piece-type">{{artist.name}}</span>
+                      </li>
+
+                      <li class="list-group-item">
                         <h3 class="inline-header">Location:</h3>
                         <span class="location">{{location}}</span>
                       </li>
