attempt to make ref relationship work right

--- a/views/index.html
+++ b/views/index.html
@@ -142,7 +142,7 @@
 
                       <li class="list-group-item">
                         <h3 class="inline-header">Artist:</h3>
-                        <span class="piece-type">{{artist.name}}</span>
+                        <span class="piece-type">{{artist}}</span>
                       </li>
 
                       <li class="list-group-item">
