--- a/views/index.html
+++ b/views/index.html
@@ -49,7 +49,7 @@
       <div class="row">
         <div class="col-md-8 col-md-offset-2">
 
-          <form class="form-horizontal">
+          <form method="POST" class="form-horizontal">
             <fieldset>
 
               <legend>Add New Piece</legend>
@@ -71,13 +71,6 @@
                 <label for="piece-title" class="col-md-4 control-label">Title :</label>
                 <div class="col-md-4">
                   <input type="text" name="title">
-                </div>
-              </div>
-
-              <div class="form-group">
-                <label for="artist" class="col-md-4 control-label">Artist :</label>
-                <div class="col-md-4">
-                  <input type="text" name="artist">
                 </div>
               </div>
 
@@ -132,7 +125,6 @@
                   <div class="col-md-9 col-xs-12 piece_entry">
                     <ul class="list-group">
 
-                      {{#each pieces}}
                       <div class="thumbnail piece-img">
                         <img src="{{image}}" alt="piece image">
                       </div>
@@ -149,7 +141,7 @@
 
                       <li class="list-group-item">
                         <h3 class="inline-header">Artist:</h3>
-                        <span class="piece-type">{{pieces.artist}}</span>
+                        <span class="piece-type">{{artist}}</span>
                       </li>
 
                       <li class="list-group-item">
@@ -166,7 +158,6 @@
                         <h3 class="inline-header">Note:</h3>
                         <span class="piece-note">{{note}}</span>
                       </li>
-                      {{/each}}
 
                     </ul>
                   </div>
