able to post new piece

--- a/views/index.html
+++ b/views/index.html
@@ -141,10 +141,10 @@
 
                       <li class="list-group-item">
                         <h3 class="inline-header">Artist:</h3>
-                        <span class="piece-type">{{artist}}</span>
+                        <span class="piece-type">{{artist.name}}</span>
                       </li>
 
-                      <li class="list-group-item">
+                      <!-- <li class="list-group-item">
                         <h3 class="inline-header">Location:</h3>
                         <span class="location">{{location}}</span>
                       </li>
@@ -157,7 +157,7 @@
                       <li class="list-group-item">
                         <h3 class="inline-header">Note:</h3>
                         <span class="piece-note">{{note}}</span>
-                      </li>
+                      </li> -->
 
                     </ul>
                   </div>
