--- a/views/index.html
+++ b/views/index.html
@@ -1,185 +1,186 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>streetsmart</title>
+  <title>streetsmart</title>
 
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-    <link rel="stylesheet" href="styles/styles.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+  <link rel="stylesheet" href="styles/styles.css">
 
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
-    <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.5/handlebars.min.js"></script>
+  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
+  <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.5/handlebars.min.js"></script>
 
-    <script type="text/javascript" src="scripts/app.js"></script>
+  <script type="text/javascript" src="scripts/app.js"></script>
 
-  </head>
-  <body>
+</head>
+<body>
 
-<!-- JUMBOTRON -->
-    <div class="jumbotron">
-      <div class="container">
-        <h1>Helloooo</h1>
-      </div>
+  <!-- JUMBOTRON -->
+  <div class="jumbotron">
+    <div class="container">
+      <h1>Helloooo</h1>
+    </div>
+  </div>
+
+
+    <!-- GALLERY -->
+    <!-- <section class="container" id="gallery">
+    <div class="row">
+    <div class="col-md-10 col-md-offset-1">
+
+    <div class="row">
+    <div class="col-md-6 col-md-offset-2">
+    <div class="col-md-3">
+    <img src="{{img}}" class="img-responsive thumbnail">
+  </div>
+  </div>
+  </div>
+
+  </div>
+  </div>
+  </section> -->
+
+  <!-- ARTIST FORM -->
+  <section class="container">
+    <div class="row">
+        <div class="col-md-10 col-md-offset-1">
+          <h2>Artists</h2>
+        </div>
     </div>
 
-
-<!-- GALLERY -->
-    <!-- <section class="container" id="gallery">
-      <div class="row">
-        <div class="col-md-10 col-md-offset-1">
-
-          <div class="row">
-            <div class="col-md-6 col-md-offset-2">
-              <div class="col-md-3">
-                <img src="{{img}}" class="img-responsive thumbnail">
-              </div>
-            </div>
-          </div>
-
-        </div>
-      </div>
-    </section> -->
-
-
-<!-- PIECE FORM -->
-    <section class="container" id="piece-form">
+    <section id="artist-form" class="container">
       <div class="row">
         <div class="col-md-8 col-md-offset-2">
-
-          <form method="POST" class="form-horizontal">
+          <form class="form-horizontal">
             <fieldset>
-
-              <legend>Add New Piece</legend>
+              <legend>Add New Artist</legend>
 
               <div class="form-group">
-                <label for="type" class="col-md-4 control-label">Type :</label>
+                <label for="name" class="col-md-4 control-label">Artist Name :</label>
                 <div class="col-md-4">
-                    <select name="type">
-                    <option value="mural">Mural</option>
-                    <option value="painting">Painting</option>
-                    <option value="sticker">Sticker</option>
-                    <option value="stencil">Stencil</option>
-                    <option value="sculpture">Sculpture</option>
-                  </select>
+                  <input type="text" name="name">
                 </div>
               </div>
 
               <div class="form-group">
-                <label for="piece-title" class="col-md-4 control-label">Title :</label>
+                <label for="contact" class="col-md-4 control-label">Social Media Link :</label>
                 <div class="col-md-4">
-                  <input type="text" name="title">
+                  <input type="text" name="contact">
                 </div>
               </div>
 
               <div class="form-group">
-                <label for="location" class="col-md-4 control-label">Location :</label>
-                <div class="col-md-4">
-                  <input type="text" name="location" placeholder="Address or description">
+                <div class="col-md-10">
+                  <button id="artist-save" class="btn btn-primary pull-right">Save</button>
                 </div>
-              </div>
-
-              <div class="form-group">
-                <label for="active" class="col-md-4 control-label">Active :</label>
-                <div class="col-md-4">
-                  <input type="checkbox" name="active">
-                </div>
-              </div>
-
-              <div class="form-group">
-                <label for="note" class="col-md-4 control-label">Note :</label>
-                <div class="col-md-4"><textarea type="text" name="note"></textarea></div>
-              </div>
-
-              <div class="form-group">
-                <label for="image" class="col-md-4 control-label">Upload an Image :</label>
-                <div class="col-md-4">
-                  <input type="text" name="image" placeholder="Paste link here">
-                </div>
-                <!-- <img src="#" height="200" alt="Image Preview"> -->
-              </div>
-
-              <div class="form-group">
-                  <div class="col-md-10"><button id="post-button" class="btn btn-primary pull-right">Save</button></div>
               </div>
             </fieldset>
           </form>
-
         </div>
       </div>
     </section>
 
-
-<!-- ONE PIECE HANDLEBARS TEMPLATE-->
-    <div id="pieces" class="container">
-
-      <script id="piece-template" type="text/x-handlebars-template">
-        <div class="row piece">
+    <!-- ARTISTS -->
+    <div id="artists" class="container">
+      <!-- ONE ARTIST -->
+      <script id="artist-template" type="text/x-handlebars-template">
+        <div class="row artist" data-artist-id="{{_id}}">
           <div class="col-md-10 col-md-offset-1">
             <div class="panel panel-default">
               <div class="panel-body">
-              <!-- begin piece internal row -->
+
+                <!-- ARTIST row -->
                 <div class="row">
-                  <div class="col-md-9 col-xs-12 piece_entry">
+                  <div class="col-md-9 col-xs-12 artist_entry">
+
                     <ul class="list-group">
 
-                      <div class="thumbnail piece-img">
-                        <img src="{{image}}" alt="piece image">
-                      </div>
-
                       <li class="list-group-item">
-                        <h3 class="inline-header">Title:</h3>
-                        <span class="piece-title">{{title}}</span>
+                        <h3 class="inline-header">Name:</h3>
+                        <span class="piece-title">{{name}}</span>
                       </li>
 
                       <li class="list-group-item">
-                        <h3 class="inline-header">Type:</h3>
-                        <span class="piece-type">{{type}}</span>
+                        <h3 class="inline-header">Social Media:</h3>
+                        <span class="piece-type">{{contact}}</span>
                       </li>
-
-                      <li class="list-group-item">
-                        <h3 class="inline-header">Artist:</h3>
-                        <span class="piece-type">{{artist.name}}</span>
-                      </li>
-
-                      <!-- <li class="list-group-item">
-                        <h3 class="inline-header">Location:</h3>
-                        <span class="location">{{location}}</span>
-                      </li>
-
-                      <li class="list-group-item">
-                        <h3 class="inline-header">Active:</h3>
-                        <span class="piece-title">{{active}}</span>
-                      </li>
-
-                      <li class="list-group-item">
-                        <h3 class="inline-header">Note:</h3>
-                        <span class="piece-note">{{note}}</span>
-                      </li> -->
 
                     </ul>
+
                   </div>
-
-
                 </div>
-
                 <div class='panel-footer'>
-                      <button class="btn btn-info add-artist">Add Artist</button>
-                      <button class="btn btn-warning delete-piece">Delete Piece</button> <!--TODO: CHANGE TO ADMIN -->
-                      <button class="btn btn-primary edit-piece">Edit Piece</button>
-                      <button class="btn btn-success save-piece">Save Piece</button>
+                  <button class="btn btn-info show-pieces">Show Pieces</button>
+                  <button class="btn btn-warning delete-artist">Delete Artist</button>
+                  <button class="btn btn-primary edit-artist">Edit Artist</button>
+                  <button class="btn btn-success save-artist">Save Artist</button>
                 </div>
               </div>
             </div>
           </div>
         </div>
       </script>
-
     </div>
-    <!-- PIECE MODAL-->
 
-    <!-- ARTIST PAGE -->
-  </body>
+  </section>
+
+  <!-- PIECE MODAL -->
+  <div class="modal fade" tabindex="-1" role="dialog" id="pieceModal">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal"></button>
+          <h4 class="modal-title">Piece</h4>
+        </div>
+
+        <div class="modal-body" id="pieces-list">
+
+          <script id="piece-template" type="text/x-handlebars-template">
+            <li class="list-group-item">
+              <h3 class="inline-header">Pieces:</h3>
+              <ul>
+                <li>{{title}}</li>
+                <li>{{type}}</li>
+                <li><img src="{{image}}"></li>
+              </ul>
+            </li>
+          </script>
+
+          <!-- <fieldset class="form-horizontal">
+            <div class="form-group">
+              <label class="col-md-4 control-label" for="title">Piece Title</label>
+              <div class="col-md-4">
+                <input id="title" name="title" type="text" class="form-control">
+              </div>
+            </div>
+
+            <div class="form-group">
+              <label class="col-md-4 control-label" for="type">Type</label>
+              <div class="col-md-4">
+                <input id="type" name="type" type="text" class="form-control" required>
+              </div>
+            </div>
+
+            <div class="form-group">
+              <label class="col-md-4 control-label" for="image">Image</label>
+              <div class="col-md-4">
+                <input id="image" type="text" class="form-control" required>
+              </div>
+            </div>
+          </fieldset> -->
+        </div>
+
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default-outline" data-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary-outline" id="savePiece">Save Piece</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+</body>
 </html>
