create new piece for artist on modal submit

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -17,10 +17,10 @@ ARTIST
   background-color: #005580;
 }
 
-/*img {
+img {
   height:250px;
   width:250px;
-}*/
+}
 
 #piece-form {
   background-color: #fa8072;
