--- a/views/index.html
+++ b/views/index.html
@@ -27,21 +27,21 @@
 
 
     <!-- GALLERY -->
-    <!-- <section class="container" id="gallery">
+  <section class="container" id="gallery">
     <div class="row">
-    <div class="col-md-10 col-md-offset-1">
+      <div class="col-md-10 col-md-offset-1">
 
-    <div class="row">
-    <div class="col-md-6 col-md-offset-2">
-    <div class="col-md-3">
-    <img src="{{img}}" class="img-responsive thumbnail">
-  </div>
-  </div>
-  </div>
+        <div class="row">
+          <div class="col-md-6 col-md-offset-2">
+            <div class="col-md-3">
+              <img src="{{img}}" class="img-responsive thumbnail">
+            </div>
+          </div>
+        </div>
 
-  </div>
-  </div>
-  </section> -->
+      </div>
+    </div>
+  </section>
 
   <!-- ARTIST FORM -->
   <section class="container">
@@ -105,7 +105,7 @@
 
                       <li class="list-group-item">
                         <h3 class="inline-header">Social Media:</h3>
-                        <span class="contact"><a href="{{contact}}">Instagram</span>
+                        <span class="contact"><a href="{{contact}}">Check out their stuff!</span>
                       </li>
 
                     </ul>
@@ -115,8 +115,8 @@
                 <div class='panel-footer'>
                   <button class="btn btn-info show-pieces">Show Pieces</button>
                   <button class="btn btn-warning delete-artist">Delete Artist</button>
-                  <button class="btn btn-primary edit-artist">Edit Artist</button>
-                  <button class="btn btn-success save-artist">Save Artist</button>
+                  <!-- <button class="btn btn-primary edit-artist">Edit Artist</button>
+                  <button class="btn btn-success save-artist">Save Artist</button> -->
                 </div>
               </div>
             </div>
@@ -133,28 +133,28 @@
       <div class="modal-content">
         <div class="modal-header">
           <button type="button" class="close" data-dismiss="modal"></button>
-          <h4 class="modal-title">Pieces</h4>
+          <h4 class="modal-title">Artist Pieces</h4>
         </div>
 
         <div class="modal-body" id="pieces-list">
 
           <script id="piece-template" type="text/x-handlebars-template">
             <div class="list row">
-              <h3 class="inline-header">Piece:</h3>
+              <h3 class="inline-header">{{title}}</h3>
               <div class="col-md-8">
                 <div class="row">
                   <img src="{{image}}" class="img-responsive">
                 </div>
                 <div class="row">
-                  <div class="col-md-3"><span>Title: </span>{{title}}</div>
+                  <!-- <div class="col-md-3"><span>Title: </span>{{title}}</div> -->
                   <div class="col-md-3"><span>Type: </span>{{type}}</div>
                 </div>
 
               </div>
             </div>
           </script>
-
-          <!-- <fieldset class="form-horizontal">
+          <!-- PIECE MODAL FORM -->
+          <fieldset class="form-horizontal">
             <div class="form-group">
               <label class="col-md-4 control-label" for="title">Piece Title</label>
               <div class="col-md-4">
@@ -175,7 +175,7 @@
                 <input id="image" type="text" class="form-control" required>
               </div>
             </div>
-          </fieldset> -->
+          </fieldset>
         </div>
 
         <div class="modal-footer">
