--- a/views/index.html
+++ b/views/index.html
@@ -28,19 +28,21 @@
 
     <!-- GALLERY -->
   <section class="container" id="gallery">
-    <div class="row">
-      <div class="col-md-10 col-md-offset-1">
+    <script id="gallery-template" type="text/x-handlebars-template">
+      <div class="row">
+        <div class="col-md-10 col-md-offset-1">
 
-        <div class="row">
-          <div class="col-md-6 col-md-offset-2">
-            <div class="col-md-3">
-              <img src="{{img}}" class="img-responsive thumbnail">
+          <div class="row">
+            <div class="col-md-6 col-md-offset-2">
+              <div class="col-md-3">
+                <img src="{{image}}" class="img-responsive thumbnail">
+              </div>
             </div>
           </div>
-        </div>
 
+        </div>
       </div>
-    </div>
+    </script>
   </section>
 
   <!-- ARTIST FORM -->
@@ -140,13 +142,13 @@
 
           <script id="piece-template" type="text/x-handlebars-template">
             <div class="list row">
-              <h3 class="inline-header">{{title}}</h3>
+              <!-- <h3 class="inline-header">{{title}}</h3> -->
               <div class="col-md-8">
                 <div class="row">
                   <img src="{{image}}" class="img-responsive">
                 </div>
                 <div class="row">
-                  <!-- <div class="col-md-3"><span>Title: </span>{{title}}</div> -->
+                  <div class="col-md-3"><span>Title: </span>{{title}}</div>
                   <div class="col-md-3"><span>Type: </span>{{type}}</div>
                 </div>
 
