add pieces to seed

--- a/views/index.html
+++ b/views/index.html
@@ -27,21 +27,9 @@
 
 
     <!-- GALLERY -->
-  <section class="container" id="gallery">
+  <section class="container-fluid" id="gallery">
     <script id="gallery-template" type="text/x-handlebars-template">
-      <div class="row">
-        <div class="col-md-10 col-md-offset-1">
-
-          <div class="row">
-            <div class="col-md-6 col-md-offset-2">
-              <div class="col-md-3">
-                <img src="{{image}}" class="img-responsive thumbnail">
-              </div>
-            </div>
-          </div>
-
-        </div>
-      </div>
+          <img src="{{image}}" class="img-fluid thumbnail">
     </script>
   </section>
 
