try to find piece-id for clicked piece

--- a/views/index.html
+++ b/views/index.html
@@ -133,7 +133,7 @@
             <div class="list row">
               <!-- <h3 class="inline-header">{{title}}</h3> -->
               <div class="col-md-8">
-                <div class="row">
+                <div class="row piece-image" data-piece-id={{_id}}>
                   <img src="{{image}}" class="img-responsive thumbnail">
                 </div>
                 <div class="row">
