--- a/views/index.html
+++ b/views/index.html
@@ -29,7 +29,10 @@
     <!-- GALLERY -->
   <section class="container-fluid" id="gallery">
     <script id="gallery-template" type="text/x-handlebars-template">
-      <img src="{{image}}" class="img-fluid thumbnail">
+      <div data-piece-id={{_id}} class="piece-image" data-artist-id={{artist._id}}>
+        <img src="{{image}}" class="img-fluid thumbnail">
+        <p></p>
+      </div>
     </script>
   </section>
 
@@ -133,7 +136,7 @@
             <div class="list row">
               <!-- <h3 class="inline-header">{{title}}</h3> -->
               <div class="col-md-8">
-                <div class="row piece-image" data-piece-id={{_id}}>
+                <div class="row piece-image">
                   <img src="{{image}}" class="img-responsive thumbnail">
                 </div>
                 <div class="row">
