--- a/views/index.html
+++ b/views/index.html
@@ -54,7 +54,10 @@
                   <div class="row">
                     <div class="col-md-3"><span>Title: </span>{{title}}</div>
                     <div class="col-md-3"><span>Type: </span>{{type}}</div>
-                    <div class="col"></div>
+                    <div class="col-md-3"><span>Location:</span>{{location}}</div>
+                    <div class="col-md-3"><span>Active:</span>{{active}}</div>
+                    <div class="col-md-3"><span>Note:</span>{{note}}</div>
+                    <div class="col-md-3"><span>Artist:</span>{{artist.name}}</div>
                   </div>
 
                 </div>
