--- a/views/index.html
+++ b/views/index.html
@@ -54,10 +54,10 @@
                   <div class="row">
                     <div class="col-md-3"><span>Title: </span>{{title}}</div>
                     <div class="col-md-3"><span>Type: </span>{{type}}</div>
-                    <div class="col-md-3"><span>Location:</span>{{location}}</div>
-                    <div class="col-md-3"><span>Active:</span>{{active}}</div>
-                    <div class="col-md-3"><span>Note:</span>{{note}}</div>
-                    <div class="col-md-3"><span>Artist:</span>{{artist.name}}</div>
+                    <div class="col-md-3"><span>Location: </span>{{location}}</div>
+                    <div class="col-md-3">{{#if active}}<span>Active: </span> YES{{else}}<span>Active: </span>NO {{/if}}</div>
+                    <div class="col-md-3"><span>Note: </span>{{note}}</div>
+                    <div class="col-md-3"><span>Artist: </span>{{artist.name}}</div>
                   </div>
 
                 </div>
@@ -76,7 +76,7 @@
 
 
   <!-- ARTIST FORM -->
-  <section class="container">
+  <section class="container artists">
     <div class="row">
         <div class="col-md-10 col-md-offset-1">
           <h2>Artists</h2>
@@ -86,7 +86,7 @@
     <section id="artist-form" class="container">
       <div class="row">
         <div class="col-md-8 col-md-offset-2">
-          <form class="form-horizontal">
+          <form class="form-horizontal form-inline">
             <fieldset>
               <legend>Add New Artist</legend>
 
@@ -103,12 +103,7 @@
                   <input type="text" name="contact">
                 </div>
               </div>
-
-              <div class="form-group">
-                <div class="col-md-10">
-                  <button id="artist-save" class="btn btn-primary pull-right">Save</button>
-                </div>
-              </div>
+              <button id="artist-save" class="btn btn-primary">Save</button>
             </fieldset>
           </form>
         </div>
