--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -1,4 +1,6 @@
-
+body {
+  background-image: url('/images/pavement.jpg');
+}
 
 /*******************************
 JUMBOTRON
@@ -38,6 +40,10 @@ img {
 ARTISTS
 *******************************/
 
+.artists {
+  margin: 10px;
+}
+
 .artists fieldset {
   padding:10px;
 }
@@ -50,9 +56,22 @@ ARTISTS
 
 
 
+
+
+
+
 /*******************************
 PIECE MODAL
 *******************************/
+
+#pieceModal img {
+  height:200px;
+  width:200px;
+}
+
+#pieceModal h3 {
+  color: rgb(76, 167, 176);
+}
 
 li {
   list-style-type: none;
@@ -62,4 +81,14 @@ li {
 span {
   font-size:18px;
   font-weight:bolder;
+}
+
+h3 span {
+  color:
+}
+
+.modal-title {
+  font-weight: bolder;
+  font-size:24px;
+  color: rgb(217, 58, 102);
 }
